# fgvaircraft-transfer-learning

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: Assignment_2_template.ipynb
